# Baristamatic

./: CMakeLists.txt  README.md
Include/: CoffeeMachine.h  Drink.h  DrinkList.h  Inventory.h
Source/: CoffeeMachine.cpp  Drink.cpp  main.cpp
doc/: BARISTAMATIC.cfg.in
testing/: CMakeLists.txt  testDrink.cpp  testMakeDrink.cpp  testProcessInput.cpp
testing/googletest-master/: CMakeLists.txt
